# format-inplace

./: Cargo.toml
docs/: output.sql  robert.sql  vincent.sql
src/: formatter.rs  main.rs  mod - backup.rs
src/formatter/: mod.rs
src/grammar/: sql.pest
