[package]
name = "format-inplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
get-selected-text = "0.1.6"
pest = { version = "2.7.12", features = ["pretty-print"] }
pest_derive = "2.7.12"
windows-hotkeys = "0.2.1"
